fix images not loading on mobile. update mobile menu to see landing page button

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,6 +1,4 @@
-src {
-    size: 100px;
-}
+
 
 body {
     background-color: whitesmoke;
